# basic_lifter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: llvm.cmake
example/: README.md  empty.ll
example/c/: factorial.c  fibonacci.c  floating_point.c  global.c  nested_structs.c  reverse_list.c  square.c
example/exe/: error  factorial  floating_point  hello  nested_structs
example/ll/: empty.ll  empty.s  error.ll  error.s  factorial.ll  factorial.s  fibonacci.ll  fibonacci.s  square.ll  square.s
include/: elf.hpp
include/disass/: Disassembler.hpp  NaiveDisassembler.hpp
include/lifter/: Lifter.hpp  SimpleTraceManager.hpp  TraceLifter.hpp  Util.hpp  lifter.hpp
include/reader/: X86Reader.hpp
include/util/: Memory.hpp
intrinsics/: Intrinsics.cpp  README.md
ports/remill/: 0001-llvm-remove-non-x86.patch  0002-remove-git-references.patch  0003-cpp-bugfixes.patch  0004-clang-include-gpp11.patch  portfile.cmake  vcpkg.json
src/: elf.cpp  elf.hpp  main.cpp
src/disass/: Disassembler.cpp  Disassembler.hpp  NaiveDisassembler.cpp
src/lifter/: Lifter.cpp  SimpleTraceManager.cpp  TraceLifter.cpp  Util.cpp  lifter.cpp  lifter.hpp
src/reader/: X86Reader.cpp
util/: External.cpp  Intrinsics.cpp  README.md
